landingpage background image

--- a/main.css
+++ b/main.css
@@ -7,6 +7,14 @@
     font-family: monotonFont;
 }
 
+.landing-page-image{
+    background-image: url("/assets/images/landingpage/tower.jpg");
+    height: 100vh; /* cause to the picture to be as long as the viewport now because i didnt set the width so it will be filled automatically by keeping the image ratio*/
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
 .round-frame{
     border-radius: 10em 10em 5em 5em;
 }
